영화삭제기능 구현중..1

--- a/review/src/main/resources/templates/MyPage/managerPwChange.html
+++ b/review/src/main/resources/templates/MyPage/managerPwChange.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" th:href="@{/css/managerPwChange.css}">
 </head>
 <body>
+<script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 <h1>관리자 마이페이지</h1>
 <form th:action method="post" th:object="${mangerInfo}" name="form">
     <div class="content">
@@ -22,6 +24,9 @@
         <div class="NewPWAgain">바꿀 비밀번호 확인</div>
         <input type="password" class="NewPWAgainWrote">
 
+        <div class="movieDelete">삭제할 영화이름 입력</div>
+        <input type="text" id="movieName">
+        <input type="button" id="deleteMovie" value="영화 삭제">
     </div>
     <div class="answer">
         <input type="submit" value="비밀번호 변경하기">
@@ -32,5 +37,26 @@
 <form th:action="@{/MyPage/delete}" th:method="post" class="answer">
     <input type="submit" value="회원 탈퇴하기">
 </form>
+<script>
+
+    $('#deleteMovie').click(function () {
+        const sendData = {
+            'deleteName': $("#movieName").val()
+        }
+        // ajax 통신
+        $.ajax({
+            type: "GET",
+            dataType:'json',
+            url: "/DeleteMovie",
+            data: sendData,
+            success: function (movieOriName) {
+                goDeletePage(movieOriName);
+            },
+            error: function (XMLHttpRequest, textStatus, errorThrown) {
+                alert("통신 실패."+XMLHttpRequest+ textStatus+ errorThrown);
+            }
+        });
+    });
+</script>
 </body>
 </html>
