--- a/review/src/main/resources/templates/MyPage/managerPwChange.html
+++ b/review/src/main/resources/templates/MyPage/managerPwChange.html
@@ -38,7 +38,6 @@
     <input type="submit" value="회원 탈퇴하기">
 </form>
 <script>
-
     $('#deleteMovie').click(function () {
         const sendData = {
             'deleteName': $("#movieName").val()
@@ -46,14 +45,35 @@
         // ajax 통신
         $.ajax({
             type: "GET",
-            dataType:'json',
+            dataType: 'json',
             url: "/DeleteMovie",
             data: sendData,
             success: function (movieOriName) {
-                goDeletePage(movieOriName);
+                console.log("첫번째"+movieOriName);
+                var checkData = new Object();
+                const splitResult = movieOriName.toString().split(",");
+                for(let i = 0; i < splitResult.length; i++){
+                    checkData[i] = splitResult[i];
+                    console.log("i 추가중"+splitResult[i]);
+                }
+                console.log("객체생성완료"+checkData[0]+checkData[1])
+
+                // ajax 통신
+                $.ajax({
+                    type: "GET",
+                    dataType: 'json',
+                    url: "/DeleteMovie/DeleteCheck",
+                    data: checkData,
+                    success: function (movies) {
+                        alert("여기까지" + movies[0]+movies[1])
+                    },
+                    error: function (XMLHttpRequest, textStatus, errorThrown) {
+                        alert("통신 실패." + XMLHttpRequest + textStatus + errorThrown);
+                    }
+                });
             },
             error: function (XMLHttpRequest, textStatus, errorThrown) {
-                alert("통신 실패."+XMLHttpRequest+ textStatus+ errorThrown);
+                alert("통신 실패." + XMLHttpRequest + textStatus + errorThrown);
             }
         });
     });
