--- a/review/src/main/resources/templates/LogIn/LogIn.html
+++ b/review/src/main/resources/templates/LogIn/LogIn.html
@@ -30,6 +30,7 @@
 
         <div class="answer">
             <input type="submit" value="로그인하기">
+            <a href="Join">회원가입하기</a>
             <input type="button" value="메인페이지로 나가기" th:onclick="|location.href='@{/}'|">
         </div>
     </form>
