--- a/review/src/main/resources/templates/MyPage/DeletePage.html
+++ b/review/src/main/resources/templates/MyPage/DeletePage.html
@@ -7,8 +7,11 @@
 <body>
 어떤 영화를 삭제하시겠습니까?
     <div id="columns">
-        <img class="moviePoster" th:src="@{/moviePhoto/}+${board}">
-        <img class="moviePoster" th:src="@{/moviePhoto/}+${board2}">
+        <th:block th:each="deletePhoster : ${movies}">
+            <div>
+                <img class="moviePoster" th:src="@{/moviePhoto/}+${deletePhoster.value}">
+            </div>
+        </th:block>
     </div>
 </body>
 </html>
