--- a/review/src/main/resources/templates/MyPage/DeletePage.html
+++ b/review/src/main/resources/templates/MyPage/DeletePage.html
@@ -25,7 +25,7 @@
             url: "/DeleteMovie/DeleteFunc",
             data: sendData,
             success: function (result) {
-                if(result==1){
+                if(result>=1){
                     alert("삭제 성공")
                     location.href='/';
                 }else{
