--- a/review/src/main/resources/templates/MyPage/DeletePage.html
+++ b/review/src/main/resources/templates/MyPage/DeletePage.html
@@ -15,28 +15,6 @@
         </div>
     </th:block>
 </div>
-<script>
-    window.DropFunc = function (OriName) {
-        const sendData = {
-            'deleteName': OriName
-        }
-        $.ajax({
-            type: "GET",
-            url: "/DeleteMovie/DeleteFunc",
-            data: sendData,
-            success: function (result) {
-                if(result>=1){
-                    alert("삭제 성공")
-                    location.href='/';
-                }else{
-                    alert("삭제 실패")
-                }
-            },
-            error: function (XMLHttpRequest, textStatus, errorThrown) {
-                alert("통신 실패." + XMLHttpRequest + textStatus + errorThrown);
-            }
-        });
-    };
-</script>
+<script th:src="@{/js/MovieDeleteFunc/MovieDeleteFunc.js}"></script>
 </body>
 </html>
